build: add stb submodule and pip library style: change IndentWidth from 4 to 2 in .clang-format refactor: move filter directory to external directory feat: add support for reading and writing images in main.cpp feat: add MedianFilter implementation in pip library The stb submodule is added to the project to support image reading and writing. The pip library is added to the project to contain the MedianFilter implementation. The filter directory is moved to the external directory to improve the project structure. The IndentWidth is changed from 4 to 2 in .clang-format to improve code readability. Support for reading and writing images is added to main.cpp. The MedianFilter implementation is added to the pip library.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/oneTBB"]
 	path = external/oneTBB
 	url = https://github.com/oneapi-src/oneTBB.git
+[submodule "external/stb"]
+	path = external/stb
+	url = https://github.com/nothings/stb.git
