--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -12,4 +12,5 @@ add_custom_command(TARGET ${PROJECT_NAME}
     POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
     $<TARGET_FILE:TBB::tbb>
+    $<TARGET_FILE:pip>
     $<TARGET_FILE_DIR:${PROJECT_NAME}>)
